Conf-AmonNG

26/05/09
- suppression de SARG

15/05/09
- dansguardian1/2.conf logfile format = 3 (format squid pour SARG)

13/05/09
- ajout d'une question pour activer ou non SARG (actif par défaut)

12/05/09
- correction dansguardian0 dansguardian$z

23/04/09
- ajout conf SARG
- suppression des /etc/cron.*/sarg
- les fichiers de log dansguardian sont désormais permutés par semaine (au lieu de par jour)

06/04/09 (emmanuel)
- ré-activation des plugins ntlm/basic pour DansGuardian
- conditionnement du démarrage de NGINX sur sa variable creole : "activer_revprox"

06/02/09 (emmanuel)
- diagnose/15-AmonServices : ajout des tests d'expiration des certificats 
26/02/09 (sam)
- agregation.conf : correction d'une erreur dans la conf (correction effectuée par GC de Nantes)

20/02/09 (sam)
-dansguardian-template.html : correction cosmétqiue. un ac-djon.fr trainait encore dans le fichier

05/02/09
- suppression de /usr/bin/era

16/01/09
- ajout d'un point pour les adresses de serveur de maj dans les domaine_no* squid

12/01/09
- bug 1016 ajout de "[src|dst]_no*_acad" pour squid

06/01/09 (sam)
- active-rvp : ajout d'une option pour renouveller le certificat.

09/12/08
- ajout du nom de l'établissement ("libelle_etab") dans 0_amon.xml

8/12/08 (sam)
- instance : correction bug (1011) dans la creation de l'utilisateur amon2 (erreur au niveau de la boucle)

4/12/08 (sam)
-squid.conf : suppression d'une directive qui etait en double

2/12/08 (sam)
- crontab : temps de relancement de magiv-rvp templatisé en paramètres avancés.
- utilisateur amon2 pas obligatoire + même proprietés et droits que l'utilisateur amon (accès à manage-amon)
sudoers : creation d'un groupe d'utilisateur comprenant amon et amon2

26/11/08 (sam)
- rvp : correction bug 953. test de l'existance du pid au moment du stop.

26/11/08
- dans le template hosts : verifie si nom_dmz n'est pas définit (spécifique amonecole/eolevz)

06/11/08